--- a/core/src/main/assets/messages/ui/ui_zh.properties
+++ b/core/src/main/assets/messages/ui/ui_zh.properties
@@ -11,7 +11,7 @@ ui.customnotebutton.new_inv=新建背包物品备注
 ui.customnotebutton.new_inv_prompt=选择要备注的背包物品
 ui.customnotebutton.new_item_title=为物品_%s_的备注拟题：
 ui.customnotebutton.new_type=新建物品类别备注
-ui.customnotebutton.new_type_prompt=选择要备注的物品类别
+ui.customnotebutton.new_type_prompt=选择要备注的物品类别\n天赋类型：辅助类。
 ui.customnotebutton$customnotewindow.edit_title=编辑标题
 ui.customnotebutton$customnotewindow.add_text=添加文本
 ui.customnotebutton$customnotewindow.edit_text=编辑文本
