--- a/core/src/main/assets/messages/windows/windows_zh.properties
+++ b/core/src/main/assets/messages/windows/windows_zh.properties
@@ -348,7 +348,7 @@ windows.wndsettings$langstab.reviewers=审核员
 windows.wndsettings$langstab.translators=翻译员
 
 windows.wndsupportprompt.title=来自开发者的留言
-windows.wndsupportprompt.intro=欢迎~希望您能在破碎的像素地牢中玩得开心！
+windows.wndsupportprompt.intro=欢迎~希望您能在蜕变像素地牢中玩得开心！
 windows.wndsupportprompt.close=关闭
 
 windows.wndtradeitem.buy=花%d金币购买
