--- a/core/src/main/assets/messages/misc/misc_zh.properties
+++ b/core/src/main/assets/messages/misc/misc_zh.properties
@@ -260,12 +260,17 @@ badges$badge.back2.title=无尽贪婪！
 badges$badge.back2.desc=击败20层的商店店主
 badges$badge.unlock_slime.title=解锁史莱姆娘！
 badges$badge.unlock_slime.desc=击败粘咕以解锁史莱姆娘
+badges$badge.unlock_ninja.title=解锁忍者！
+badges$badge.unlock_ninja.desc=击败天狗以解锁忍者
 badges$badge.heroboss_slain_1.title=饭桶终结者
 badges$badge.heroboss_slain_1.desc=击败战士？
+badges$badge.heroboss_slain_2.title=缉拿归案
+badges$badge.heroboss_slain_2.desc=击败盗贼？
 badges$badge.champion_4.title=死境斗士
 badges$badge.champion_4.desc=在启用包括“恶劣环境”和“极端环境”在内的八个或更多挑战的情况下通关
 badges$badge.heroboss_counter_1.title=手足不相惜
 badges$badge.heroboss_counter_1.desc=在一局游戏中作为史莱姆娘击败粘咕
-
+badges$badge.heroboss_counter_2.title=手足不相惜
+badges$badge.heroboss_counter_2.desc=在一局游戏中作为忍者击败天狗
 challenges.test_mode=测试时间
 challenges.test_mode_desc=追加选项，测试时间！\n\n-你可以自由生成物品，自由移动，生成敌人\n-在测试模式下，挑战的小图标会被替换，用于指示测试模式\n-注意，测试模式不计入排行榜
