--- a/core/src/main/assets/messages/actors/actors_zh.properties
+++ b/core/src/main/assets/messages/actors/actors_zh.properties
@@ -3027,7 +3027,7 @@ actors.hero.talent.yunying_meal.desc=_+1：_进食仅消耗1回合，并获得_2
 actors.hero.talent.xia.title=秘术之霞
 actors.hero.talent.xia.desc=_+1：_阅读卷轴获得_3回合霞之步法_。\n\n_+2：_阅读卷轴获得_5回合霞之步法_。\n\n天赋类型：_特效类_。\n\n霞之步法会_提高50%闪避_。
 actors.hero.talent$xiadef.name=霞之步法
-actors.hero.talent$xiadef.desc=忍者阅读卷轴中的奥义后，使身体变得轻盈灵动，提高50%闪避，能更好的躲避敌人攻击。\n\n剩余回合：%s回合。
+actors.hero.talent$xiadef.desc=忍者阅读卷轴中的奥义后，使身体变得轻盈灵动，提高50%%闪避，能更好的躲避敌人攻击。\n\n剩余回合：%s回合。
 
 actors.hero.talent.feint.title=声东击西
 actors.hero.talent.feint.desc=_+1：_投掷非武器类物品时，会将视野内敌人吸引到目标位置，有_20回合冷却_。\n\n_+2：_投掷非武器类物品时，会将视野内敌人吸引到目标位置，有_15回合冷却_。\n\n天赋类型：_特效类_。
@@ -3038,21 +3038,64 @@ actors.hero.talent.light_box.title=轻便忍具
 actors.hero.talent.light_box.desc=_+1：_在不装备手里剑箱时，充能速度为正常的_25%_。\n\n_+2：_在不装备手里剑箱时，充能速度为正常的_50%_。\n\n_+3：_在不装备手里剑箱时，充能速度为正常的_75%_。\n\n天赋类型：_辅助类_。
 actors.hero.heroclass.ninja=忍者
 actors.hero.heroclass.ninja_desc_short=忍者初始携带一件_手里剑箱_，同时有更大的探测范围和更高的隐蔽能力。
-actors.hero.heroclass.ninja_desc=史莱姆娘初始携带意见_独特的手里剑箱_，手里剑箱可发出小小手里剑打击和干扰对方。\n\n忍者能够从更远的距离探测秘密和陷阱，并且更难被敌人发现。\n\n同时，忍者初始还携带有一把_胁差_、水袋以及绒布袋。\n\n忍者开局鉴定的物品有：\n_-_鉴定卷轴\n_-_毒气药剂\n_-_传送卷轴
+actors.hero.heroclass.ninja_desc=忍者初始携带意见_独特的手里剑箱_，手里剑箱可发出小小手里剑打击和干扰对方。\n\n忍者能够从更远的距离探测秘密和陷阱，并且更难被敌人发现。\n\n同时，忍者初始还携带有一把_胁差_、水袋以及绒布袋。\n\n忍者开局鉴定的物品有：\n_-_鉴定卷轴\n_-_毒气药剂\n_-_传送卷轴
 actors.hero.heroclass.ninja_unlock=_在一场游戏中击败天狗_以解锁忍者。
 
 actors.hero.herosubclass.tatteki_ninja=铁炮忍者
 actors.hero.herosubclass.tatteki_ninja_short_desc=_铁炮忍者_拥有一挺强力铁炮，有极高的伤害和较长的发射间隔。
 actors.hero.herosubclass.tatteki_ninja_desc=铁炮忍者会获得一挺铁炮，铁炮可装备到玩家副手位置上，共享主手装备等级。\n\n铁炮具有极高的伤害，但是命中极低，有30回合的发射间隔，每次发射后，不论是否命中目标，都会使视野内敌人产生恐惧。\n\n投武和小小手里剑命中目标，给予目标弹道修正效果，在该效果下，铁炮必中。
-
-actors.hero.talent.soko.title=早盒
+actors.hero.talent.soko.title=早合
 actors.hero.talent.soko.desc=_+1：_铁炮发射间隔_降低4回合_。\n\n_+2：_铁炮发射间隔_降低7回合_。\n\n_+3：_铁炮发射间隔_降低10回合_。
-
 actors.hero.talent.kono_fukusa.title=钓野伏
 actors.hero.talent.kono_fukusa.desc=_+1：_物理伏击和攻击处于追击状态的敌人，_伤害提升20%_。\n\n_+2：_物理伏击和攻击处于追击状态的敌人，_伤害提升40%_。\n\n_+3：_物理伏击和攻击处于追击状态的敌人，_伤害提升60%_。
-
 actors.hero.talent.kunikuchi.title=国崩炮
 actors.hero.talent.kunikuchi.desc=_+1：_铁炮可以装填炸弹，射击目标时会触发炸弹效果。\n\n_+2：_铁炮可以装填炸弹，射击目标时会触发炸弹效果，炸弹可应用于_3次射击_。\n\n_+3：_铁炮可以装填炸弹，射击目标时会触发炸弹效果，炸弹可应用于_5次射击_。
 
+actors.hero.herosubclass.ninja_master=忍术大师
+actors.hero.herosubclass.ninja_master_short_desc=_忍术大师_可以根据地形消耗忍术能量释放不同忍术。
+actors.hero.herosubclass.ninja_master_desc=忍术大师会通过常规地形、水、草木地形消耗忍术能量释放不同的忍术，忍术能量会随时间自动恢复。\n\n普通地形:\n遁术-影遁：瞬间移动2格位置并获得5回合隐身。\n近身术-燕返：一回合内对目标造成2次80%伤害并造成5回合混乱。\n投掷术-影击：获得投掷术效果后的第一次投掷会造成基于投掷武器伤害的流血和残废效果。\n\n水地形:\n遁术-水遁：获得悠游自如，在5回合内在水面上移速提升。\n近身术-流水斩：+1攻击距离，对目标进行攻击并给予目标5回合冻伤。\n投掷术-飞水投掷：抽取当前周围的水，并在落点形成水块。\n\n高草、矮草、枯草、余烬:\n遁术-草木复苏：在周围产生1-3个沉沦的腐梅触手。\n近身术-蔓縛：进行1次手持武器125%伤害的攻击，并造成5回合生根。\n投掷术-百華乱散：造成随机有害植物的效果。
+actors.hero.talent.soul_hunting.title=灵魂狩猎
+actors.hero.talent.soul_hunting.desc=_+1：_当有敌方生物死亡时，_获得0.5点忍术能量_。\n\n_+2：_当有敌方生物死亡时，_获得1点忍术能量_。\n\n_+3：_当有敌方生物死亡时，_获得1.5点忍术能量_。
+actors.hero.talent.use_environment.title=环境利用
+actors.hero.talent.use_environment.desc=_+1：_处于火焰中，释放忍术获得_2回合火焰之力_。\n\n_+2：_处于毒气，混乱，酸蚀等气体中，释放遁术可以吸收周围_3x3气体_，在释放投掷术时将气体释放到目标位置。\n\n_+3：_释放遁术可以吸收周围_3x3电场_，根据吸收量转化为神器充能和法杖充能回合。
+actors.hero.talent.mind_water.title=心如止水
+actors.hero.talent.mind_water.desc=_+1：__近身术_所消耗的_忍者能量-1_。\n\n_+2：__投掷术_所消耗的_忍者能量-1_。\n\n_+3：__遁术_所消耗的_忍者能量-1_。
+actors.buffs.ninja_energy.name=忍者能量
+actors.buffs.ninja_energy.desc=忍术大师可以通过消耗忍术能量依照地形可以释放不同类型的忍术。\n\n当前能量%d/10;
+actors.buffs.ninja_energy.action=忍术
+
+
+
+
+
+
+
+
+actors.hero.abilities.ninja.onesword.name=一之太刀
+actors.hero.abilities.ninja.onesword.short_desc=忍者施展剑圣的战斗奥义_一之太刀_，这种奥义会给忍者提供10回合增益。
+actors.hero.abilities.ninja.onesword.desc=在奥义一之太刀下，忍者移动速度提升100%，攻速上升50%，近战武器伤害提升30%，武器若为武士刀或胁差则增伤倍率会有额外20%提升。
+actors.hero.abilities.ninja.onesword$oku_onesword.name=奥义：一之太刀
+actors.hero.abilities.ninja.onesword$oku_onesword.desc=新阴流最强剑术奥义，如今你已运用在你的近身技上。\n\n剩余回合：%s回合。
+actors.hero.talent.offensive.title=攻势
+actors.hero.talent.offensive.desc=_+1：_在奥义一之太刀下，_攻速提升62.5%_，_近战伤害提升45%_。\n\n_+2：_在奥义一之太刀下，_攻速提升75%_，_近战伤害提升60%_。\n\n_+3：_在奥义一之太刀下，_攻速提升87.5%_，_近战伤害提升75%_。\n\n_+4：_在奥义一之太刀下，_攻速提升100%_，_近战伤害提升90%_。\n\n不敢暴虎，不敢冯河。
+actors.hero.talent.glimpse.title=一闪
+actors.hero.talent.glimpse.desc=_+1：_在奥义一之太刀下，_移速提升137.5%_。\n\n_+2：_在奥义一之太刀下，_移速提升175%_。\n\n_+3：_在奥义一之太刀下，_移速提升212.5%_。\n\n_+4：_在奥义一之太刀下，_移速提升250%_。\n\n人知其一，莫知其他。
+actors.hero.talent.kill_continue.title=斩杀续势
+actors.hero.talent.kill_continue.desc=_+1：_在奥义一之太刀下，使用近战武器击杀目标_延长1回合_奥义一之太刀。\n\n_+2：_在奥义一之太刀下，使用近战武器击杀目标_延长2回合_奥义一之太刀。\n\n_+3：_在奥义一之太刀下，使用近战武器击杀目标_延长3回合_奥义一之太刀。\n\n_+4：_在奥义一之太刀下，使用近战武器击杀目标_延长4回合_奥义一之太刀。\n\n战战兢兢，如临深渊，如履薄冰。
+
+actors.hero.abilities.ninja.spiderjar.name=古天明平蜘蛛
+actors.hero.abilities.ninja.spiderjar.short_desc=忍者将大量火药装进_古天明平蜘蛛_中，点燃并扔出，会造成巨量的爆炸伤害。
+actors.hero.abilities.ninja.spiderjar.desc=平蜘蛛釜在爆炸前会散发令生物甚至是机械都陶醉的味道，吸引未陷入沉睡的敌人，平蜘蛛釜爆炸对周围3x3范围造成15-30点伤害。
+actors.hero.abilities.ninja.spiderjar$spider.name=平蜘蛛釜
+actors.hero.abilities.ninja.spiderjar$spider.desc=一个装满火药的珍贵茶具，似乎是某个大人物最爱的器物，如今被忍者装满炸药并点燃引线。\n\n这个茶具散发着迷人的味道，持续吸引敌人。
+actors.hero.abilities.ninja.spiderjar$spider.ondeath=如同松永久秀那样，点燃火药，为大家献上烟火表演。
+actors.hero.abilities.ninja.spiderjar$smallspider.name=小蜘蛛釜
+actors.hero.abilities.ninja.spiderjar$smallspider.desc=平蜘蛛釜爆炸后里面还有一个小蜘蛛釜没有完全引爆。\n\n这个茶具散发着迷人的味道，持续吸引敌人而且还有led灯效。
+actors.hero.talent.power_gunpowder.title=强效火药
+actors.hero.talent.power_gunpowder.desc=_+1：_蜘蛛釜造成伤害提升至_25-40_。\n\n_+2：_在+1的基础上，爆炸范围提升至_5x5_。\n\n_+3：_在+2的基础上，蜘蛛釜造成伤害提升至_35-50_。\n\n_+4：_在+3的基础上，爆炸范围提升至_7x7_。
+actors.hero.talent.tea_stains.title=特色茶垢
+actors.hero.talent.tea_stains.desc=_+1：_蜘蛛釜对目标造成伤害时，给予目标_5回合燃烧_。\n\n_+2：_蜘蛛釜对目标造成伤害时，给予目标_5回合燃烧或者冰冻_。\n\n_+3：_在+2的基础上，给予目标_3回合麻痹_。\n\n_+4：_在+3的基础上，给予目标的_燃烧或冰冻为8回合_。
+actors.hero.talent.firework.title=烟火表演
+actors.hero.talent.firework.desc=_+1：_蜘蛛釜爆炸后保留一个小蜘蛛釜，会在_10回合内持续吸引敌人_。\n\n_+2：_在+1的基础上，小蜘蛛釜爆炸时对3x3范围造成_5-15点伤害_。\n\n_+3：_在+2的基础上，小蜘蛛釜_引爆时长延长至15回合_，并在这段时间内持续吸引敌人。\n\n_+4：_在+3的基础上，小蜘蛛釜爆炸时对3x3范围造成_10-20点伤害_。
 
 
