--- a/core/src/main/assets/messages/misc/misc_zh.properties
+++ b/core/src/main/assets/messages/misc/misc_zh.properties
@@ -270,7 +270,7 @@ badges$badge.champion_4.title=死境斗士
 badges$badge.champion_4.desc=在启用包括“恶劣环境”和“极端环境”在内的八个或更多挑战的情况下通关
 badges$badge.heroboss_counter_1.title=手足不相惜
 badges$badge.heroboss_counter_1.desc=在一局游戏中作为史莱姆娘击败粘咕
-badges$badge.heroboss_counter_2.title=手足不相惜
+badges$badge.heroboss_counter_2.title=忍者？忍者为何？！
 badges$badge.heroboss_counter_2.desc=在一局游戏中作为忍者击败天狗
 challenges.test_mode=测试时间
 challenges.test_mode_desc=追加选项，测试时间！\n\n-你可以自由生成物品，自由移动，生成敌人\n-在测试模式下，挑战的小图标会被替换，用于指示测试模式\n-注意，测试模式不计入排行榜
