--- a/core/src/main/assets/messages/journal/journal_zh.properties
+++ b/core/src/main/assets/messages/journal/journal_zh.properties
@@ -196,6 +196,9 @@ journal.document.hero.title=英雄故事
 journal.document.hero.slimegril.title=智识，情感，史莱姆
 journal.document.hero.slimegril.body=第一次...记忆读取尝试...\n“...队长...快...再坚持一会儿...我...们很快...就能离...开这里了...”\n“不...不用管我了...继续顺着...那条路...走下去...找到...出口...”\n识别...一名人类女性...属于这副躯体...一名人类男性...这副躯体的交谈对象...关系推测...伙伴？\n\n第二次记忆读取尝试，声带修复得差不多，已经能较流畅地发声了。\n“该死，为什么...为什么偏偏会遇到这种事...我要离开这个可怕的地方，离开这个肮脏的下水道！”\n“呜...队长...对不起...”\n确认前面提到的男性对象死亡，这副躯体出现强烈情绪波动...“情绪”？理解不能...\n\n第三次记忆读取尝试。\n“(书写)相·当·不·对·劲...嗯，就写下这么多吧...等等，那个怪物...竟然追上来了？！不...不要！”\n“咳——！好痛...眼睛...眼睛睁不开了...”\n“爸...妈...队长...大家...对不起...”\n桑雅...吗？看来这个木牌子上写的就是“我”原来的名字吧\n好奇怪的感觉，这种感觉是什么呢？好像是一种叫做“不甘”的情感...\n\n春至十六日...叁柒陆年...如果没推算错误的话，就是这个日期了。\n现在，我的名字是：艾米娅·丝莱尔。
 
+journal.document.hero.ninja.title=村落，护符，忍者
+journal.document.hero.ninja.body=战国，村落，忍者\n随着不落城的陷落，战国时代已然终结，兵役与军功再也无法抵扣村中的赋税。这几年村子连遭旱灾和台风的摧残，连四公六民的赋税都难以缴足。今年村里不知又要饿死多少人...我必须想出办法，一定要拯救村落。\n\n天狗，面具，叛徒\n几十年前，村里曾出一位不世出的忍者奇才，精通手里剑，更擅用火药和制炸弹。可他却偷走了神社中供奉的面具，从此消失无踪。自那以后，村中人烟日渐稀少，饿殍与日俱增。村长总说，是天狗盗走面具，触怒了御社神，才为村落招来神罚。我发誓，定要将他碎尸万段。\n\n南蛮商人，铁炮，护符\n近日村里来了一位南蛮商人，贩卖各式货物，从日常用品到令人闻风丧胆的战场杀器——“铁炮”。我曾亲眼见识它的可怕，我的同伴阿吉就是因它而死。商人说，一挺铁炮价值五十贯，相当于一位武士的卖官价。若拥有它，我或许能比天狗更强。\n南蛮商人见村子困顿，提起一则关于“护符”的传说——那是一件能实现任何愿望的宝物，而他下一站正要前往西幻大陆探寻那护符的踪迹。我苦苦哀求，他终于答应带我同行。我一定要取得护符，拯救村落。\n\n夏归五日...叁柒肆年...启航！
+
 
 journal.notes$landmark.shop=商店
 journal.notes$landmark.alchemy=炼金釜
