--- a/core/src/main/assets/messages/windows/windows_zh.properties
+++ b/core/src/main/assets/messages/windows/windows_zh.properties
@@ -415,3 +415,9 @@ windows.wndclericspells1.info_desc=选择一个要了解的法术，或按圣典
 windows.wndclericspells1.cast=施法
 windows.wndclericspells1.info=信息
 windows.wndclericspells1.quick_cast=快捷施法
+
+windows.wndninjaabilities.title=选择一种忍术
+windows.wndninjaabilities.energycost=(%d能量)
+
+
+
