--- a/core/src/main/assets/messages/actors/actors_zh.properties
+++ b/core/src/main/assets/messages/actors/actors_zh.properties
@@ -3013,7 +3013,7 @@ actors.hero.talent.water_wave.title=水波荡漾
 actors.hero.talent.water_wave.desc=_+1：_攻击位于水面上的敌人时史莱姆娘将造成_1点额外伤害_。\n\n_+2：_攻击位于水面上的敌人时史莱姆娘将造成_2点额外伤害_。\n\n天赋类型：_物攻类_。
 
 actors.hero.talent.natural_affinity.title=自然亲和
-actors.hero.talent.natural_affinity.desc=_+1：_史莱姆娘的饥饿速率_降低20%_。\n\n_+2：_史莱姆娘饥饿速率_降低33%_。\n\n天赋类型：_辅助类_。
+actors.hero.talent.natural_affinity.desc=_+1：_史莱姆娘的饥饿速率_降低20%_。\n\n_+2：_史莱姆娘的饥饿速率_降低33%_。\n\n天赋类型：_辅助类_。
 
 actors.hero.talent.quality_absorption.title=优质吸收
 actors.hero.talent.quality_absorption.desc=_+1：_史莱姆娘吸收露珠恢复的生命值_+1_。\n\n_+2：_史莱姆娘吸收露珠恢复的生命值_+2_。\n\n天赋类型：_辅助类_。\n\n该天赋同样适用于水袋内的露珠。
