--- a/core/src/main/assets/messages/items/items_zh.properties
+++ b/core/src/main/assets/messages/items/items_zh.properties
@@ -2542,9 +2542,9 @@ items.artifacts.shuriken_box.ac_shoot=发射
 items.artifacts.shuriken_box.no_charge=手里剑箱中的小小手里剑不足。
 items.artifacts.shuriken_box.cursed=你不能使用被诅咒的手里剑箱。
 items.artifacts.shuriken_box.prompt=选择要瞄准的地方
-items.artifacts.shuriken_box.desc=手里剑箱是件强大的忍具，可以通过吸收周围的精神能量来凝聚成小小手里剑供持有者将其掷出以打击目标！
+items.artifacts.shuriken_box.desc=手里剑箱是件强大的忍具，可以通过吸收被你击败者的精神能量进行强化，并可将这些精神能量凝聚成小小手里剑供持有者将其掷出以打击目标！
 items.artifacts.shuriken_box.desc_cursed=被诅咒的手里剑箱不再能够凝聚小小手里剑，也不愿供持有者使用它。
-items.artifacts.shuriken_box.desc_equipped=现在掷出的小小手里剑等效_+%1$d等级_的手里剑，移动后可以不消耗回合掷出并无视敌人的护甲，命中后有_%2$s%%概率_使目标麻痹3回合，若目标已被麻痹过一次则无法再次被麻痹。\n\n小小手里剑拥有投掷武器的特性，可以受到神射之戒的增幅，在远程投掷时拥有额外的精准，但对于邻近的目标精准会大幅降低。
+items.artifacts.shuriken_box.desc_equipped=现在掷出的小小手里剑能造成_%1d~%2d点伤害_，如果有对投掷武器的增益等级，该伤害会随增益等级提升(不在面板伤害上显示)。\n\n小小手里剑在你移动后可以不消耗回合掷出并无视敌人的护甲，命中后有_%3$s%%概率_使目标麻痹3回合，若目标已被麻痹过一次则无法再次被麻痹。\n\n小小手里剑拥有投掷武器的特性，在远程投掷时拥有额外的精准，但对于邻近的目标精准会大幅降低。
 items.artifacts.shuriken_box$shurikenrecharge.levelup=你的手里剑箱变得更强大了！
 items.artifacts.shuriken_box.discover_hint=某位英雄初始携带该物品。
 items.remains.metalfragment.name=金属残片
