--- a/core/src/main/assets/messages/items/items_zh.properties
+++ b/core/src/main/assets/messages/items/items_zh.properties
@@ -2352,7 +2352,8 @@ items.honeypot.ac_shatter=击碎
 items.honeypot.desc=这个巨型蜜罐只是薄薄地涂了一圈蜂蜜，作为替代里头住着一只巨型蜜蜂！这种大型蜜蜂一般只待在蜂巢里，也许罐子本身就是某种特殊陷阱屋？蜜蜂看起来对罐子很满意，当你看向它时它非常警惕地对你回以嗡鸣。
 items.honeypot$shatteredpot.name=破碎蜂蜜罐
 items.honeypot$shatteredpot.desc=这个罐子已经被打碎，仅靠罐沿的粘稠蜂蜜勉强维持形状，而且正在缓缓解体。\n\n尽管蜜罐碎了，看来蜜蜂依然想捍卫它的住所。
-
+items.honeypot$shatteredpot.ac_eat=食用
+items.honeypot$shatteredpot.eat=甜甜蜜蜜，美味至极。￡你感觉体内的毒素被快速排出！￡
 items.item.prompt=选择丢出的方位
 items.item.ac_drop=放下
 items.item.ac_throw=扔出
