--- a/core/src/main/assets/messages/items/items_zh.properties
+++ b/core/src/main/assets/messages/items/items_zh.properties
@@ -1912,7 +1912,7 @@ items.weapon.melee.greatshield.typical_stats_desc=这件武器通常能格挡0~%
 items.weapon.melee.greatshield.stats_desc=这件武器能格挡0~%d点伤害。格挡量随升级而增长。
 items.weapon.melee.greatshield.ability_name=护卫
 items.weapon.melee.greatshield.typical_ability_desc=决斗家可以用巨型方盾_护卫_自己，一般会在_%d回合_内完全抵挡针对自己的物理或魔法攻击。一旦决斗家抵挡过攻击，再行反击或施法，护卫都会终止。
-items.weapon.melee.greatshield.ability_desc=决斗家可以用巨型方盾_护卫_自己，在_%d回合_内完全抵挡针对自己的物理或魔法攻击。一旦决斗家抵挡过攻击，再行还击或施法，护卫都会终止。
+items.weapon.melee.greatshield.ability_desc=决斗家可以用巨型方盾_护卫_自己，一般会在_%d回合_内完全抵挡针对自己的物理或魔法攻击。一旦决斗家抵挡过攻击，再行反击或施法，护卫都会终止。
 items.weapon.melee.greatshield.upgrade_ability_stat_name=武技持续时间
 items.weapon.melee.greatshield.desc=与其说它是一面盾，不如说它是一堵能移动的墙。这一大块金属对于防御十分有效，但没有在攻击方面留下多少余地。
 
@@ -2016,7 +2016,7 @@ items.weapon.melee.roundshield.typical_stats_desc=这件武器通常能格挡0~%
 items.weapon.melee.roundshield.stats_desc=这件武器能格挡0~%d点伤害。通过升级可以使格挡量增长。
 items.weapon.melee.roundshield.ability_name=护卫
 items.weapon.melee.roundshield.typical_ability_desc=决斗家可以用圆盾_护卫_自己，一般会在_%d回合_内完全抵挡针对自己的物理或魔法攻击。一旦决斗家抵挡过攻击，再行还击或施法，护卫都会终止。
-items.weapon.melee.roundshield.ability_desc=决斗家可以用圆盾_护卫_自己，在_%d回合_内完全抵挡针对自己的所有物理或魔法攻击。一旦决斗家抵挡过攻击，再行还击或施法，护卫都会终止。
+items.weapon.melee.roundshield.ability_desc=决斗家可以用圆盾_护卫_自己，一般会在_%d回合_内完全抵挡针对自己的物理或魔法攻击。一旦决斗家抵挡过攻击，再行还击或施法，护卫都会终止。
 items.weapon.melee.roundshield.upgrade_ability_stat_name=武技持续时间
 items.weapon.melee.roundshield.desc=这个大盾可以有效格挡攻击，在危机时刻也可以作为不错的武器使用。
 items.weapon.melee.roundshield$guardtracker.name=护卫中
@@ -2306,7 +2306,7 @@ items.brokenseal.prompt=选择一件护甲。
 items.brokenseal.unknown_armor=你需要先鉴定那件护甲有无诅咒。
 items.brokenseal.cursed_armor=纹章不能贴附于被诅咒的盔甲。
 items.brokenseal.affix=你将纹章佩挂在了护甲上！
-items.brokenseal.desc=一枚蜡制纹章，作为勇气的象征而贴附在护甲之上。纹章上刻有磨损的防御符咒，并从中碎裂为两半。\n\n这是一件来自家乡的纪念物，在纹章的支持下战士会变得不屈不挠。佩戴着纹章，战士会在将要受伤至生命值半数以下时立即获得护盾。\n\n纹章可以被_贴附在护甲上_并能在护甲间转移。它能够携带一次升级，前提是升级时纹章需已贴附在护甲上。
+items.brokenseal.desc=一枚蜡制纹章，作为勇气的象征而贴附在护甲之上。纹章上刻有磨损的防御符咒，并从中碎裂为两半。\n\n这是一件来自家乡的纪念物，在纹章的支持下战士会变得不屈不挠。佩戴着纹章，战士能缓慢获得基于护甲品质的额外生命护盾。\n\n纹章可以被_贴附在护甲上_并能在护甲间转移。它能够携带一次升级，前提是升级时纹章需已贴附在护甲上。
 items.brokenseal.inscribed=纹章刻有_%s_。
 items.brokenseal.choose_title=选择一个刻印
 items.brokenseal.choose_desc=这件护甲与破损纹章均刻有刻印。请选择一个想保留的刻印。\n\n护甲刻印：%1$s\n破损纹章刻印：%2$s\n\n注意，如果选择保留护甲的刻印，纹章将无法转移该刻印。
