--- a/core/src/main/assets/messages/actors/actors_zh.properties
+++ b/core/src/main/assets/messages/actors/actors_zh.properties
@@ -802,7 +802,7 @@ actors.hero.hero.revive=重生十字章迸裂出苏生的能量！
 ##classes
 actors.hero.heroclass.warrior=战士
 actors.hero.heroclass.warrior_desc_short=战士用他的_破损纹章_生成护盾以额外减免伤害。纹章可以在护甲之间转移，并且可以_携带一级升级_。
-actors.hero.heroclass.warrior_desc=战士初始携带一枚_独特的破损纹章_，他在装备附着纹章的护甲时会随时间产生生命值之上的护盾值。纹章可以在护甲之间转移，并且可以携带一级升级。\n\n战士拥有更高的力量，这使他能更轻松地使用较为沉重的装备。\n\n同时，战士初始携带_一柄破旧的短剑_，_三块投石_，布甲，水袋与绒布袋。\n\n战士开局鉴定的物品有：\n_-_鉴定卷轴\n_-_治疗药剂\n_-_盛怒卷轴
+actors.hero.heroclass.warrior_desc=战士初始携带一枚_独特的破损纹章_，他在装备附着纹章的护甲时会随时间产生生命值之上的护盾值。纹章可以在护甲之间转移，并且可以携带一级升级。\n\n战士拥有更高的力量，这使他能_更轻松地使用较为沉重的装备_。\n\n同时，战士初始携带_一柄破旧的短剑_，_三块投石_，布甲，水袋与绒布袋。\n\n战士开局鉴定的物品有：\n_-_鉴定卷轴\n_-_治疗药剂\n_-_盛怒卷轴
 actors.hero.heroclass.warrior_unlock=战士开局即解锁。
 
 actors.hero.heroclass.mage=法师
@@ -1916,7 +1916,7 @@ actors.hero.talent.strong_throw.title=强力投掷
 actors.hero.talent.strong_throw.desc=_+1：_投掷近战武器时对敌人造成_2倍武器阶数_的伤害。\n\n_+2：_投掷近战武器时对敌人造成_4倍武器阶数_的伤害。\n\n天赋类型：_物攻类_。
 
 actors.hero.talent.counter_attack.title=反戈一击
-actors.hero.talent.counter_attack.desc=_+1：_受到近战攻击时有_20%的概率_造成_英雄等级0.5倍的反击_。\n\n_+2：_受到近战攻击时有_35%概率_造成_英雄等级0.5倍的反击_。\n\n_+3：_受到近战攻击时有_50%概率_造成_英雄等级0.5倍的反击_。\n\n天赋类型：_物攻类_。
+actors.hero.talent.counter_attack.desc=_+1：_受到近战攻击时有_20%概率_造成_英雄等级0.5倍的反击_。\n\n_+2：_受到近战攻击时有_35%概率_造成_英雄等级0.5倍的反击_。\n\n_+3：_受到近战攻击时有_50%概率_造成_英雄等级0.5倍的反击_。\n\n天赋类型：_物攻类_。
 
 actors.hero.talent.fear_incarnation.title=恐惧化身
 actors.hero.talent.fear_incarnation.desc=_+1：_攻击处于_恐惧状态_的敌人额外造成_3点伤害_。\n\n_+2：_攻击处于_恐惧状态_的敌人额外造成_5点伤害_。\n\n天赋类型：_物攻类_。\n\n“在敌人胆怯之时给予迎头痛击。”
