--- a/core/src/main/assets/messages/custom/custom_zh.properties
+++ b/core/src/main/assets/messages/custom/custom_zh.properties
@@ -11,7 +11,6 @@ custom.dict.dict.bomb = 炸弹
 custom.dict.dict.bomb_d = 一颗颇庞大的黑火药炸弹。它炸起来周围全得遭殃。\n爆炸中心的伤害为_5+层数~10+2*层数_，其余范围伤害为_1~10+2*层数_。受护甲减免。\n\n强化炸弹配方见炼金指南。
 
 custom.dict.dict.bomb_flame = 燃烧弹
-custom.dict.dict.bomb_flame = 燃烧弹
 custom.dict.dict.bomb_flame_d = 这枚改造过的炸弹会在爆炸时释放出一片燃烧的火海。\n5*5火焰，10回合(在裂缝上只会持续2回合)。
 
 custom.dict.dict.bomb_flash = 电击炸弹
@@ -984,9 +983,9 @@ custom.testmode.generator.testmelee.ac_setting = 设定参数
 custom.testmode.generator.testmelee.enchant_id_pre = 附魔种类：0：无附魔\n1：常见附魔，2：稀有附魔\n3：罕见附魔，4：诅咒附魔\n选定种类：%d\n
 custom.testmode.generator.testmelee.enchant_id_e0 = 无附魔。\n_当前：%s_
 custom.testmode.generator.testmelee.enchant_id_e1 = 0：烈焰附魔；1：电击附魔\n2：寒霜附魔；3：恒动附魔\n_当前：%s_
-custom.testmode.generator.testmelee.enchant_id_e2 = 0：招架附魔；1：繁茂附魔\n2：索敌附魔；3：弹性附魔\n4：幸运附魔；5：紊乱附魔\n_当前：%s_
-custom.testmode.generator.testmelee.enchant_id_e3 =0：腐化附魔；1：死神附魔\n2：吸血附魔\n_当前：%s_
-custom.testmode.generator.testmelee.enchant_id_e4 = 0：喧闹诅咒；1：转移诅咒\n2：易爆诅咒；3：炫目诅咒\n4：友善诅咒；5：极化诅咒\n6：血祭诅咒；7：妄为诅咒\n_当前：%s_
+custom.testmode.generator.testmelee.enchant_id_e2 = 0：招架附魔；1：繁茂附魔；2：索敌附魔\n3：弹性附魔；4：幸运附魔；5：紊乱附魔\n_当前：%s_
+custom.testmode.generator.testmelee.enchant_id_e3 =0：腐化附魔；1：死神附魔\n2：血饮附魔；3：横扫附魔\n_当前：%s_
+custom.testmode.generator.testmelee.enchant_id_e4 = 0：喧闹诅咒；1：转移诅咒；2：易爆诅咒\n3：炫目诅咒；4：友善诅咒；5：极化诅咒\n6：血祭诅咒；7：妄为诅咒；8：沉重诅咒\n_当前：%s_
 custom.testmode.generator.testmelee.null_enchant = 无
 custom.testmode.generator.testmelee.collect_success = 你获得了：%s
 custom.testmode.generator.testmelee$settingswindow.tier = 阶数 
@@ -1002,6 +1001,7 @@ custom.testmode.generator.testmissile.desc = 生成指定的投掷武器
 custom.testmode.generator.testmissile.ac_give = 生成
 custom.testmode.generator.testmissile.ac_setting = 设置
 custom.testmode.generator.testmissile.ac_bow = 生成弓
+custom.testmode.generator.testmissile.ac_tatteki = 生成铁炮
 custom.testmode.generator.testmissile.select = _当前选定：%s_
 custom.testmode.generator.testmissile.collect_success = 你获得了：%s
 custom.testmode.generator.testmissile$settingswindow.level = 等级
@@ -1220,6 +1220,40 @@ custom.testmode.terrainplacer.desc=用于改造地形
 custom.testmode.terrainplacer.ac_place=改造
 custom.testmode.terrainplacer.ac_set=设置
 custom.testmode.terrainplacer.prompt=选择目标地格
+
+custom.testmode.blobsemitter.name=特效放置器
+custom.testmode.blobsemitter.desc=用于放置气体之类的特效。请不要对地图最外圈使用
+custom.testmode.blobsemitter.ac_place=放置特效
+custom.testmode.blobsemitter.ac_set=设置
+custom.testmode.blobsemitter.prompt=选择目标地格
+custom.testmode.blobsemitter.alchemy=炼金气泡
+custom.testmode.blobsemitter.blizzard=暴风雪
+custom.testmode.blobsemitter.confusiongas=混乱气体
+custom.testmode.blobsemitter.corrosivegas=腐蚀气体
+custom.testmode.blobsemitter.electricity=电击
+custom.testmode.blobsemitter.fire=火焰
+custom.testmode.blobsemitter.foliage=地下花园
+custom.testmode.blobsemitter.freezing=冰冻
+custom.testmode.blobsemitter.goowarn=粘液警告
+custom.testmode.blobsemitter.inferno=狱火
+custom.testmode.blobsemitter.paralyticgas=麻痹气体
+custom.testmode.blobsemitter.regrowth=草地再生
+custom.testmode.blobsemitter.sacrificialfire=献祭之火
+custom.testmode.blobsemitter.smokescreen=烟幕
+custom.testmode.blobsemitter.stenchgas=恶臭气体
+custom.testmode.blobsemitter.stormcloud=风暴云
+custom.testmode.blobsemitter.toxicgas=毒气
+custom.testmode.blobsemitter.waterofawareness=察觉井水
+custom.testmode.blobsemitter.waterofhealth=生命井水
+custom.testmode.blobsemitter.web=蛛网
+
+custom.testmode.strengthsetting.name=调整力量和等级
+custom.testmode.strengthsetting.desc=调整力量和等级
+custom.testmode.strengthsetting.ac_set=设置
+
+custom.testmode.testtalent.name=蜕变晶柱
+custom.testmode.testtalent.desc=可以无限蜕变指定天赋，不会消耗自身。
+custom.testmode.testtalent.ac_set=蜕变
 
 ## Challenges
 custom.ch.mimic.mimicforchallenge.health = \n生命+%d
