--- a/core/src/main/assets/messages/actors/actors_zh.properties
+++ b/core/src/main/assets/messages/actors/actors_zh.properties
@@ -1969,7 +1969,7 @@ actors.hero.talent.water_attack.title=水性攻击
 actors.hero.talent.water_attack.desc=_+1：_在水面上额外造成_1点伤害_。\n\n_+2：_在水面上额外造成_2点伤害_。\n\n天赋类型：_物攻类_。\n\n“快来水，快来水。”
 
 actors.hero.talent.more_chance.title=更多机会
-actors.hero.talent.more_chance.desc=_+1：_使用蜕变秘卷有_10%概率不消耗_。\n\n_+2：_使用蜕变秘卷有_20%概率不消耗_。\n\n天赋类型：_资源类_。
+actors.hero.talent.more_chance.desc=_+1：_使用蜕变秘卷和蜕变结晶有_10%概率不消耗_。\n\n_+2：_使用蜕变秘卷和蜕变结晶有_20%概率不消耗_。\n\n天赋类型：_资源类_。
 
 actors.hero.talent.amazing_eyesight.title=眼力惊人
 actors.hero.talent.amazing_eyesight.desc=_+1：_对_3格及以外距离_的敌人的近战伤害提高_35%_，命中增加_35%_。\n\n_+2：_对_2格及以外距离_的敌人的近战伤害提高_35%_，命中增加_35%_。\n\n天赋类型：_物攻类_。
@@ -2675,7 +2675,7 @@ actors.hero.talent.spider_sense.title=蜘蛛感应
 actors.hero.talent.spider_sense.desc=_+1：_英雄受到视野外的攻击会获得_1回合时间气泡_。\n\n_+2：_英雄受到视野外的攻击会获得_2回合时间气泡_。\n\n天赋类型：_辅助类_。\n\n“彼得一激灵。”
 
 actors.hero.talent.no_more_mob.title=NO集群
-actors.hero.talent.no_more_mob.desc=_+1：_视野外熟睡的敌人在挑战集群智能生效时，有_50%概率_不被惊醒。\n\n_+2：_在+1的基础上，因此被惊醒的敌人会进入_游荡状态_而非定位英雄。\n\n天赋类型：_辅助类_。\n\n“我再也不开3级集群了。”
+actors.hero.talent.no_more_mob.desc=_+1：_视野外熟睡的敌人在挑战集群智能生效时，有_50%概率_不被惊醒。\n\n_+2：_在+1的基础上，因此被惊醒的敌人会进入_游荡状态_而非定位英雄。\n\n天赋类型：_其他类_。\n\n“我再也不开3级集群了。”
 
 actors.hero.talent.kebi.title=刻笔·布莱恩特
 actors.hero.talent.kebi.desc=_+1：_奥术刻笔现在还可以_为武器给予附魔_。\n\n_+2：_在+1的基础上，奥术刻笔_给予强力附魔/刻印的概率提升_。\n\n天赋类型：_资源类_。
@@ -2693,7 +2693,7 @@ actors.hero.talent.static_light.title=静滞电流
 actors.hero.talent.static_light.desc=_+1：施法伤害+1_，使用法杖或魔杖施法攻击敌人时额外给予_造成伤害5%回合的麻痹_。\n\n_+2：施法伤害+2_，使用法杖或魔杖施法攻击敌人时额外给予_造成伤害7.5%回合的麻痹_。\n\n天赋类型：_法伤类_。\n\n该天赋给予的麻痹回合数向下取整。\n\n“这是走向雷电法王的一小步。”
 
 actors.hero.talent.miracle_alchemy.title=奇迹炼金
-actors.hero.talent.miracle_alchemy.desc=_+1：_炼金时有_20%概率_额外炼制出1份炼金产物。\n\n_+2：_炼金时有_40%概率_额外炼制出1份炼金产物。\n\n天赋类型：_资源类_。\n\n该天赋对_饰物、炖肉、熟无味果、肌肉记忆合剂、注魔秘卷、所有炸弹、液金、圣典拓本、根骨秘药和注魔菱晶_的炼制不会生效。
+actors.hero.talent.miracle_alchemy.desc=_+1：_炼金时有_20%概率_额外炼制出1份炼金产物。\n\n_+2：_炼金时有_40%概率_额外炼制出1份炼金产物。\n\n天赋类型：_资源类_。\n\n该天赋对_饰物、炖肉、熟无味果、肌肉记忆合剂、注魔秘卷、所有炸弹、液金、圣典拓本、根骨秘药、注魔菱晶和蜕变结晶_的炼制不会生效。
 
 #新法术
 actors.hero.spells.ascension_curse.name=升天咒
