--- a/core/src/main/assets/messages/custom/custom_zh.properties
+++ b/core/src/main/assets/messages/custom/custom_zh.properties
@@ -1251,9 +1251,9 @@ custom.testmode.strengthsetting.name=调整力量和等级
 custom.testmode.strengthsetting.desc=调整力量和等级
 custom.testmode.strengthsetting.ac_set=设置
 
-custom.testmode.testtalent.name=蜕变晶柱
-custom.testmode.testtalent.desc=可以无限蜕变指定天赋，不会消耗自身。
-custom.testmode.testtalent.ac_set=蜕变
+custom.testmode.generator.testtalent.name=蜕变晶柱
+custom.testmode.generator.testtalent.desc=可以无限蜕变指定天赋，不会消耗自身。
+custom.testmode.generator.testtalent.ac_give=蜕变
 
 ## Challenges
 custom.ch.mimic.mimicforchallenge.health = \n生命+%d
