--- a/core/src/main/assets/messages/items/items_zh.properties
+++ b/core/src/main/assets/messages/items/items_zh.properties
@@ -1332,6 +1332,8 @@ items.spells.unstablespell.desc=这块黑色方形小水晶的每个面都浮动
 items.spells.wildenergy.name=强能结晶
 items.spells.wildenergy.desc=这个结晶中含有部分驱动DM-300的诅咒之力。当施放时，它会为你的法杖与佩戴着的神器充能，但同时也会随机触发一种诅咒法杖效果。幸运的是你可以指定这种诅咒魔法的施放方向。
 
+items.spells.transformspell.name=蜕变结晶
+items.spells.transformspell.desc=这块黑色方形小水晶的每个面都镌刻着规整的条纹，正发出淡淡的紫光。\n\n激活时，它会允许使用者对任一通用天赋进行定向蜕变。
 
 ###runestones
 items.stones.inventorystone.ac_use=使用
@@ -2429,7 +2431,7 @@ items.scrollofsublimation.choose_desc=选择一个天赋以进行蜕变
 items.scrollofsublimation.replace_desc=选择你希望得到的Boss天赋
 items.scrollofsublimation.metamorphose_talent=取得天赋
 #DM216：描述更改
-items.scrollofsublimation.desc=这张秘卷吸收了Boss的能力，不过与一般的蜕变秘卷不同，这张秘卷的魔力将允许你选择一个Boss天赋为己所用！此外还会给予1点天赋点供你分配。\n\n注意：\n_5层Boss_和_10层Boss_的Boss天赋在_1层_，_15层Boss_和_20层Boss_的Boss天赋在_2层_，_25层Boss_的Boss天赋在_3层_。\n_5层Boss_提供的天赋点在_1层_，_10层Boss_和_15层Boss_提供的天赋点在_2层_，_20层Boss_和_25层Boss_提供的天赋点在_3层_。
+items.scrollofsublimation.desc=这张秘卷吸收了%s的能力，不过与一般的蜕变秘卷不同，这张秘卷的魔力将允许你选择一个Boss天赋为己所用！此外还会给予1点天赋点供你分配。\n\n注意：\n_5层Boss_和_10层Boss_的Boss天赋在_1层_，_15层Boss_和_20层Boss_的Boss天赋在_2层_，_25层Boss_的Boss天赋在_3层_。\n_5层Boss_提供的天赋点在_1层_，_10层Boss_和_15层Boss_提供的天赋点在_2层_，_20层Boss_和_25层Boss_提供的天赋点在_3层_。
 items.scrollofsublimation.warning=确认放弃释放卷轴的效果吗？放弃不消耗卷轴。
 items.scrollofsublimation.ac_read=阅读
 items.scrollofsublimation.discover_hint=你可从某种敌人的掉落物中获得该物品。
