--- a/core/src/main/assets/messages/actors/actors_zh.properties
+++ b/core/src/main/assets/messages/actors/actors_zh.properties
@@ -2213,7 +2213,7 @@ actors.hero.talent.wide_knowledge.title=知识渊博
 actors.hero.talent.wide_knowledge.desc=_+1：_捡到物品_立即了解_其是否有诅咒。\n\n_+2：_捡到物品_立即鉴定_该物品。\n\n_+3：_在+2的基础上，捡到的物品被鉴定时获得_3回合法杖充能_。\n\n天赋类型：_辅助类_。
 
 actors.hero.talent.gold_meal.title=饭里藏金
-actors.hero.talent.gold_meal.desc=_+1：_进食获得_25金币_。\n\n_+2：_进食获得_35金币_。\n\n天赋类型：_资源类_。\n\n该天赋_仅能触发100次_。\n\n“你这口粮是外皮是金子做的还是肉馅是金子做的？”
+actors.hero.talent.gold_meal.desc=_+1：_进食获得_25金币_。\n\n_+2：_进食获得_35金币_。\n\n天赋类型：_资源类_。\n\n“你这口粮是外皮是金子做的还是肉馅是金子做的？”
 
 actors.hero.talent.no_viewrape.title=不要视奸
 actors.hero.talent.no_viewrape.desc=_+1：_受到远程伤害时，对攻击方给予_1回合失明_。\n\n_+2：_受到远程伤害时，对攻击方给予_2回合失明_。\n\n_+3：_受到远程伤害时，对攻击方给予_3回合失明_。\n\n天赋类型：_特效类_。\n\n“那个穿紫色短裙的矮人和画着浓妆的豺狼是谁！？”
@@ -3175,7 +3175,7 @@ actors.hero.abilities.ninja.onesword.name=一之太刀
 actors.hero.abilities.ninja.onesword.short_desc=忍者施展剑圣的战斗奥义：_一之太刀_，在短时间内增加其移动速度、近战攻击速度以及近战伤害。
 actors.hero.abilities.ninja.onesword.desc=忍者施展了剑圣的战斗奥义：一之太刀！这一奥义持续10回合。\n\n施展奥义：一之太刀后，忍者拥有双倍的移动速度与+50%的攻击速度，同时近战伤害提高30%。若手中武器为胁差或武士刀，则近战伤害额外提高20%。
 actors.hero.abilities.ninja.onesword$oku_onesword.name=奥义：一之太刀
-actors.hero.abilities.ninja.onesword$oku_onesword.desc=新阴流最强剑术奥义，如今已被忍者运用在近身技上，增加其移动速度、攻击速度以及近战伤害。\n\n剩余回合数：%s回合
+actors.hero.abilities.ninja.onesword$oku_onesword.desc=新当流最强剑术奥义，如今已被忍者运用在近身技上，增加其移动速度、攻击速度以及近战伤害。\n\n剩余回合数：%s回合
 actors.hero.talent.offensive.title=攻势
 actors.hero.talent.offensive.desc=_+1：_奥义：一之太刀对攻击速度与近战伤害的加成由50%与30%提升至_62.5%_与_45%_。\n\n_+2：_奥义：一之太刀对攻击速度与近战伤害的加成由50%与30%提升至_75%_与_60%_。\n\n_+3：_奥义：一之太刀对攻击速度与近战伤害的加成由50%与30%提升至_87.5%_与_75%_。\n\n_+4：_奥义：一之太刀对攻击速度与近战伤害的加成由50%与30%提升至_100%_与_90%_。\n\n“不敢暴虎，不敢冯河。”
 actors.hero.talent.glimpse.title=一闪
@@ -3197,5 +3197,34 @@ actors.hero.talent.tea_stains.title=特色茶垢
 actors.hero.talent.tea_stains.desc=_+1：_平蜘蛛釜爆炸会附带_5回合的燃烧_。\n\n_+2：_平蜘蛛釜爆炸会附带_5回合的燃烧或冻伤_。\n\n_+3：_平蜘蛛釜爆炸会附带_5回合的燃烧或冻伤_以及_3回合的麻痹_。\n\n_+4：_平蜘蛛釜爆炸会附带_8回合的燃烧或冻伤_以及_3回合的麻痹_。
 actors.hero.talent.firework.title=烟火表演
 actors.hero.talent.firework.desc=_+1：_平蜘蛛釜爆炸后会留下一个小蜘蛛釜，可持续吸引未陷入沉睡的敌人_10回合_，随后产生3x3范围的爆炸但不造成伤害。\n\n_+2：_平蜘蛛釜爆炸后会留下一个小蜘蛛釜，可持续吸引未陷入沉睡的敌人_10回合_，随后产生3x3范围的爆炸造成_5~15点_伤害。\n\n_+3：_平蜘蛛釜爆炸后会留下一个小蜘蛛釜，可持续吸引未陷入沉睡的敌人_15回合_，随后产生3x3范围的爆炸造成_5~15点_伤害。\n\n_+4：_平蜘蛛釜爆炸后会留下一个小蜘蛛釜，可持续吸引未陷入沉睡的敌人_15回合_，随后产生3x3范围的爆炸造成_10~20点_伤害。
+
+actors.hero.heroclass.dm400=DM400
+actors.hero.heroclass.dm400_desc_short=DM-400初始携带一个独特的_指令集合工具_，可以产生最基础的_僚机无人机_协助作战。
+actors.hero.heroclass.dm400_desc=DM-400初始携带一个独特的_指令集合工具_，可以产生最基础的_僚机无人机_协助作战。\n\nDM-400初始未携带任何武器，但空手攻击能够造成_1~8点伤害_(不随等级和力量提升),此外它的每次物理攻击命中时都会给予目标_3回合不可叠加的指令标记_效果，这会加强部分战斗型无人机对目标造成的效果。\n\nDM-400初始还携带有_两个废弃齿轮_、布甲、水袋以及绒布袋。\n\nDM-400开局鉴定的物品有：\n鉴定卷轴\n冰霜药剂\n恐惧卷轴。
+actors.hero.heroclass.dm400_unlock=_在一场游戏中击败DM300_以解锁DM400。
+
+actors.hero.talent.mark_meal.title=标记一餐
+actors.hero.talent.mark_meal.desc=_+1：_进食会为DM400接下来3次物理攻击附带的_指令标记持续时间提升至5回合_。\n\n_+2：_进食会为DM400接下来3次物理攻击附带的_指令标记持续时间提升至6回合_。\n\n天赋类型：_特效类_。\n\n如果这个天赋被其他英雄获得，那么它会改为附带2/3回合的眩晕。
+
+actors.hero.talent.target_targeting.title=目标针对
+actors.hero.talent.target_targeting.desc=_+1：_攻击带有_指令标记_效果的敌人时DM-400将造成_1点额外伤害_。\n\n_+2：_攻击带有_指令标记_效果的敌人时DM-400将造成_2点额外伤害_。\n\n天赋类型：_物攻类_。\n\n如果这个天赋被其他英雄获得，它会改为对带有眩晕效果的敌人生效。
+
+actors.hero.talent.over_meal.title=进食过载
+actors.hero.talent.over_meal.desc=_+1：_DM-400进食_只花费0.5回合_。\n\n_+2：_DM-400进食_不消耗回合_。\n\n天赋类型：_特效类_。
+
+actors.hero.talent.recover_charge.title=充能回收
+actors.hero.talent.recover_charge.desc=_+1：_当DM-400为指令集合工具录入卷轴后会为指令集合工具回复_1点充能_。\n\n_+2：_当DM-400为指令集合工具录入卷轴后会为指令集合工具回复_2点充能_。\n\n天赋类型：_特效类_。\n\n如果这个天赋被其他英雄获得，阅读卷轴获得2/4回合神器充能。
+
+actors.hero.talent.body_reinforce.title=机身加固
+actors.hero.talent.body_reinforce.desc=_+1：_：产生的无人机将会继承DM-400_50%护甲_。\n\n_+2：_产生的无人机将会继承DM-400_75%护甲_。\n\n天赋类型：_辅助类_。\n\n如果这个天赋被其他英雄获得，会使英雄获得5%/10%伤害减免。
+
+actors.hero.talent.quick_tool.title=快捷工具
+actors.hero.talent.quick_tool.desc=_+1：_：DM-400不装备指令集合工具也能使用其功能，但未装备时工具的充能速率会降至_25%_。\n\n_+2：_DM-400不装备指令集合工具也能使用其功能，但未装备时工具的充能速率会降至_50%_。\n\n_+2：_DM-400不装备指令集合工具也能使用其功能，但未装备时工具的充能速率会降至75%_。\n\n天赋类型：_辅助类_。\n\n如果这个天赋被其他英雄获得，会使英雄提高3.33%/6.67%/10%的法杖和神器充能速度。
+
+
+
+
+
+
 
 
