--- a/core/src/main/assets/messages/items/items_zh.properties
+++ b/core/src/main/assets/messages/items/items_zh.properties
@@ -2581,6 +2581,38 @@ items.weapon.tatteki.discover_hint=某位英雄转职后获得该物品。
 items.armor.ninjaarmor.name=英雄忍甲
 items.armor.ninjaarmor.desc=装备这件只有上忍才能装备的忍者铠甲时，忍者能够施展一项特殊技能。
 
+items.artifacts.instructiontool.name=指令集合工具
+items.artifacts.instructiontool.ac_make=使用
+items.artifacts.instructiontool.ac_enter=录入
+items.artifacts.instructiontool.ac_guide=指引
+items.artifacts.instructiontool.need_to_equip=装备指令集合工具才能使用其功能。
+items.artifacts.instructiontool.cursed=你不能使用被诅咒的指令集合工具。
+items.artifacts.instructiontool.no_charge=充能不足，无法使用
+items.artifacts.instructiontool.more_drone=无人机数量超出充能上限，无法使用
+items.artifacts.instructiontool.desc=这套工具可以调用DM-400的指令集合以生产无人机协助其作战。
+items.artifacts.instructiontool.desc_cursed=被诅咒的指令集合工具无法指挥和制造无人机。
+items.artifacts.instructiontool.desc_equipped=指令集合工具可以录入升级卷轴进行升级，升级后会提高充能上限并强化其产生的所有无人机。
+items.artifacts.instructiontool.desc_noenter=\n\n当前尚无法录入更多信息，可以生产的无人机为僚机无人机
+items.artifacts.instructiontool.desc_enter=\n\n当前已录入信息，可以生产的其他类型无人机。
+items.artifacts.instructiontool.no_drone=没有无人机需要指引。
+items.artifacts.instructiontool.selectdrone=选择需要指引的无人机
+items.artifacts.instructiontool.direct_prompt=选择该无人机目标
+items.artifacts.instructiontool.less=空间过小，无法生产无人机。
+items.artifacts.instructiontool.usecharge=当前已经生产%s架无人机，此次使用将会消耗%s点充能。
+items.artifacts.instructiontool.usecharge2=当前未生产无人机，此次使用将会消耗1点充能。
+items.artifacts.instructiontool.prompt=录入卷轴
+items.artifacts.instructiontool.unable_scroll=无法录入该卷轴
+items.artifacts.instructiontool.unknown_scroll=无法录入未知卷轴
+items.artifacts.instructiontool$instructionmark.name=指令标记
+items.artifacts.instructiontool$instructionmark.desc=该敌人已被DM-400进行标记。\n\nDM-400的物理攻击可以标记受其攻击的敌人一段时间，在此期间的所有攻击型无人机的攻击都会对该单位产生额外效果。\n标记回合：%s回合
+items.artifacts.instructiontool$instructionmark.desc_at=该敌人已被AT-400标记为重点打击对象。\n\n标记存在期间，该敌人受到AT-400的攻击伤害增加30%(这不会使得攻击型无人机造成的伤害增加)。\n标记回合：%s回合
+items.artifacts.instructiontool$instructionmark.desc_au=该敌人已被AU-400标记为高度危险对象。\n\n标记存在期间，该敌人对AU-400的攻击伤害降低20%(这不会使得辅助型无人机受到的伤害降低)。\n标记回合：%s回合
+items.artifacts.instructiontool$drone.name=僚机无人机
+items.artifacts.instructiontool$drone.desc=最基础的战斗型无人机。近战单位，击带有“指令标记”的敌人时可以无视其防御。
+items.artifacts.instructiontool$drone.direct_defend=准备前往目标地点待命。
+items.artifacts.instructiontool$drone.direct_follow=准备返航。
+items.artifacts.instructiontool$drone.direct_attack=已锁定目标。
+
 
 
 
