--- a/core/src/main/assets/messages/actors/actors_zh.properties
+++ b/core/src/main/assets/messages/actors/actors_zh.properties
@@ -3198,33 +3198,88 @@ actors.hero.talent.tea_stains.desc=_+1：_平蜘蛛釜爆炸会附带_5回合的
 actors.hero.talent.firework.title=烟火表演
 actors.hero.talent.firework.desc=_+1：_平蜘蛛釜爆炸后会留下一个小蜘蛛釜，可持续吸引未陷入沉睡的敌人_10回合_，随后产生3x3范围的爆炸但不造成伤害。\n\n_+2：_平蜘蛛釜爆炸后会留下一个小蜘蛛釜，可持续吸引未陷入沉睡的敌人_10回合_，随后产生3x3范围的爆炸造成_5~15点_伤害。\n\n_+3：_平蜘蛛釜爆炸后会留下一个小蜘蛛釜，可持续吸引未陷入沉睡的敌人_15回合_，随后产生3x3范围的爆炸造成_5~15点_伤害。\n\n_+4：_平蜘蛛釜爆炸后会留下一个小蜘蛛釜，可持续吸引未陷入沉睡的敌人_15回合_，随后产生3x3范围的爆炸造成_10~20点_伤害。
 
-actors.hero.heroclass.dm400=DM400
+actors.hero.heroclass.dm400=DM-400
 actors.hero.heroclass.dm400_desc_short=DM-400初始携带一个独特的_指令集合工具_，可以产生最基础的_僚机无人机_协助作战。
 actors.hero.heroclass.dm400_desc=DM-400初始携带一个独特的_指令集合工具_，可以产生最基础的_僚机无人机_协助作战。\n\nDM-400初始未携带任何武器，但空手攻击能够造成_1~8点伤害_(不随等级和力量提升),此外它的每次物理攻击命中时都会给予目标_3回合不可叠加的指令标记_效果，这会加强部分战斗型无人机对目标造成的效果。\n\nDM-400初始还携带有_两个废弃齿轮_、布甲、水袋以及绒布袋。\n\nDM-400开局鉴定的物品有：\n鉴定卷轴\n冰霜药剂\n恐惧卷轴。
-actors.hero.heroclass.dm400_unlock=_在一场游戏中击败DM300_以解锁DM400。
+actors.hero.heroclass.dm400_unlock=_在一场游戏中击败DM300_以解锁DM-400。
 
 actors.hero.talent.mark_meal.title=标记一餐
-actors.hero.talent.mark_meal.desc=_+1：_进食会为DM400接下来3次物理攻击附带的_指令标记持续时间提升至5回合_。\n\n_+2：_进食会为DM400接下来3次物理攻击附带的_指令标记持续时间提升至6回合_。\n\n天赋类型：_特效类_。\n\n如果这个天赋被其他英雄获得，那么它会改为附带2/3回合的眩晕。
+actors.hero.talent.mark_meal.desc=_+1：_进食会为DM400接下来3次物理攻击附带的_指令标记持续时间提升至5回合_。\n\n_+2：_进食会为DM400接下来3次物理攻击附带的_指令标记持续时间提升至6回合_。\n\n天赋类型：_特效类_。
+actors.hero.talent.mark_meal.meta_desc=_如果这个天赋被其它英雄获得_，那么它会改为附带2/3回合的眩晕。
+
 
 actors.hero.talent.target_targeting.title=目标针对
-actors.hero.talent.target_targeting.desc=_+1：_攻击带有_指令标记_效果的敌人时DM-400将造成_1点额外伤害_。\n\n_+2：_攻击带有_指令标记_效果的敌人时DM-400将造成_2点额外伤害_。\n\n天赋类型：_物攻类_。\n\n如果这个天赋被其他英雄获得，它会改为对带有眩晕效果的敌人生效。
+actors.hero.talent.target_targeting.desc=_+1：_攻击带有_指令标记_效果的敌人时DM-400将造成_1点额外伤害_。\n\n_+2：_攻击带有_指令标记_效果的敌人时DM-400将造成_2点额外伤害_。\n\n天赋类型：_物攻类_。
+actors.hero.talent.target_targeting.meta_desc=_如果这个天赋被其它英雄获得_，它会改为对带有眩晕效果的敌人生效。
 
 actors.hero.talent.over_meal.title=进食过载
 actors.hero.talent.over_meal.desc=_+1：_DM-400进食_只花费0.5回合_。\n\n_+2：_DM-400进食_不消耗回合_。\n\n天赋类型：_特效类_。
 
 actors.hero.talent.recover_charge.title=充能回收
-actors.hero.talent.recover_charge.desc=_+1：_当DM-400为指令集合工具录入卷轴后会为指令集合工具回复_1点充能_。\n\n_+2：_当DM-400为指令集合工具录入卷轴后会为指令集合工具回复_2点充能_。\n\n天赋类型：_特效类_。\n\n如果这个天赋被其他英雄获得，阅读卷轴获得2/4回合神器充能。
+actors.hero.talent.recover_charge.desc=_+1：_当DM-400为指令集合工具录入卷轴后会为指令集合工具回复_1点充能_。\n\n_+2：_当DM-400为指令集合工具录入卷轴后会为指令集合工具回复_2点充能_。\n\n天赋类型：_特效类_。
+actors.hero.talent.recover_charge.meta_desc=_如果这个天赋被其它英雄获得_，阅读卷轴获得2/4回合神器充能。
 
 actors.hero.talent.body_reinforce.title=机身加固
-actors.hero.talent.body_reinforce.desc=_+1：_：产生的无人机将会继承DM-400_50%护甲_。\n\n_+2：_产生的无人机将会继承DM-400_100%护甲_。\n\n天赋类型：_辅助类_。\n\n如果这个天赋被其他英雄获得，会使英雄获得5%/10%伤害减免。
+actors.hero.talent.body_reinforce.desc=_+1：_：产生的无人机将会继承DM-400_50%护甲_。\n\n_+2：_产生的无人机将会继承DM-400_75%护甲_。\n\n天赋类型：_辅助类_。
+actors.hero.talent.body_reinforce.meta_desc=_如果这个天赋被其它英雄获得_，会使英雄获得5%/10%伤害减免。
 
 actors.hero.talent.quick_tool.title=快捷工具
-actors.hero.talent.quick_tool.desc=_+1：_：DM-400不装备指令集合工具也能使用其功能，但未装备时工具的充能速率会降至_25%_。\n\n_+2：_DM-400不装备指令集合工具也能使用其功能，但未装备时工具的充能速率会降至_50%_。\n\n_+2：_DM-400不装备指令集合工具也能使用其功能，但未装备时工具的充能速率会降至75%_。\n\n天赋类型：_辅助类_。\n\n如果这个天赋被其他英雄获得，会使英雄提高3.33%/6.67%/10%的法杖和神器充能速度。
+actors.hero.talent.quick_tool.desc=_+1：_：DM-400不装备指令集合工具也能使用其功能，但未装备时工具的充能速率会降至_25%_。\n\n_+2：_DM-400不装备指令集合工具也能使用其功能，但未装备时工具的充能速率会降至_50%_。\n\n_+2：_DM-400不装备指令集合工具也能使用其功能，但未装备时工具的充能速率会降至75%_。\n\n天赋类型：_辅助类_。
+actors.hero.talent.quick_tool.meta_desc=_如果这个天赋被其它英雄获得_，会使英雄提高3.33%/6.67%/10%的法杖和神器充能速度。
 
+actors.hero.herosubclass.at400=AT-400
+actors.hero.herosubclass.at400_short_desc=_AT-400_允许调用更多种类的攻击型无人机协助作战，庞大的无人机集群将更加有效地打击一切敌对目标。
+actors.hero.herosubclass.at400_desc=AT-400在攻击被标记的敌人时伤害增加30%，并且现在能够录入更多卷轴以调用更多种类的攻击型无人机，这些无人机在战斗性能方面都更为优秀。\n\n闪光无人机(祛邪)：攻击敌人的同时还能够干扰敌人视线\n激光无人机(充能)：迸射强烈的激光射线灼烧敌人\n迷醉无人机(催眠)：攻击将有机会麻痹敌人\n袭扰无人机(盛怒)：能够袭扰敌人甚至使其变得躁狂\n震慑无人机(恐惧)：通过火力压制震慑敌人\n混沌无人机(嬗变)：在一段时间后变化为任意战斗型无人机
 
+actors.hero.talent.sustain_mark.title=持久标记
+actors.hero.talent.sustain_mark.desc=_+1：_AT-400的物理攻击能够额外造成_2回合指令标记_效果。\n\n_+2：_AT-400的物理攻击能够额外造成_4回合指令标记_效果。\n\n_+3：_AT-400的物理攻击能够额外造成_6回合指令标记_效果。\n\n该天赋可对袭扰无人机和震慑无人机生效。
 
+actors.hero.talent.battle_upgrade.title=战斗升级
+actors.hero.talent.battle_upgrade.desc=_+1：_AT-400的所有战斗型无人机造成的伤害提升_15%_并且物理伤害会无视敌方_26.7%的防御_。\n\n_+2：_AT-400的所有战斗型无人机造成的伤害提升_22.5%_并且物理伤害会无视敌方_53.3%的防御_。\n\n_+3：_AT-400的所有战斗型无人机造成的伤害提升_30%_并且物理伤害会无视敌方_80%的防御_。
 
+actors.hero.talent.fly_drone.title=空中飞蚊
+actors.hero.talent.fly_drone.desc=_+1：_AT-400产生的所有战斗型无人机必定闪避其遭到的_前2次攻击_并且在必闪次数消耗完以前所有攻击必中。\n\n_+2：_AT-400产生的所有战斗型无人机必定闪避其遭到的_前3次攻击_并且在必闪次数消耗完以前所有攻击必中。\n\n_+3：_AT-400产生的所有战斗型无人机必定闪避其遭到的_前4次攻击_并且在必闪次数消耗完以前所有攻击必中。\n\n该天赋不对变化前的混沌无人机生效。
 
+actors.hero.ally.attackdrone.name=战斗型无人机
+actors.hero.ally.attackdrone.desc=专职战斗的无人机
+actors.hero.ally.attackdrone$flashdrone.name=闪光无人机
+actors.hero.ally.attackdrone$flashdrone.desc=录入祛邪卷轴后产生的战斗型无人机。近战单位，拥有3格攻击距离和神器效果等级~5+神器效果等级点攻击力，拥有3+玩家最大生命值20％的生命。攻击带有“指令标记”的敌人时可以给予敌人3回合的“致盲”效果，同时还会对带有“指令标记”的亡灵和恶魔属性敌人额外造成5点法术伤害。
+actors.hero.ally.attackdrone$laserdrone.name=激光无人机
+actors.hero.ally.attackdrone$laserdrone.desc=录入充能卷轴后产生的战斗型无人机。远程单位，攻击造成神器效果等级~2+神器效果等级点法术伤害，拥有3+玩家最大生命值10％的生命。攻击带有“指令标记”的敌人时有33％概率给予3回合的“燃烧”效果。
+actors.hero.ally.attackdrone$anesthesiadrone.name=迷乱无人机
+actors.hero.ally.attackdrone$anesthesiadrone.desc=录入催眠卷轴后产生的战斗型无人机。近战单位，拥有1格攻击距离和1+神器效果等级~2*神器效果等级点攻击力，拥有3+玩家最大生命值25％的生命。攻击带有“指令标记”的敌人时有33％概率给予3回合的“混乱”效果。
+actors.hero.ally.attackdrone$raiddrone.name=袭扰无人机
+actors.hero.ally.attackdrone$raiddrone.desc=录入盛怒卷轴后产生的战斗型无人机。近战单位，拥有3格攻击距离和神器效果等级/2~2+神器效果等级点攻击力，拥有玩家2倍的移动速度和3+玩家最大生命值10％的生命。攻击不带有“指令标记”的敌人时有33％概率给予3回合不可叠加的“指令标记”效果，攻击带有“指令标记”的敌人时有17％概率给予3回合的“狂乱”效果。
+actors.hero.ally.attackdrone$shockdrone.name=震慑无人机
+actors.hero.ally.attackdrone$shockdrone.desc=震慑无人机：录入恐惧卷轴后产生的战斗型无人机。远程单位，拥有1+神器效果等级~2*神器效果等级点攻击力，拥有3+玩家最大生命值10％的生命。攻击不带有“指令标记”的敌人时有17％概率给予3回合不可叠加的“指令标记”效果，攻击带有“指令标记”的敌人时有33％概率给予3回合的“恐惧”效果。
+
+actors.hero.ally.auxiliarydrone.name=辅助型无人机
+actors.hero.ally.auxiliarydrone.desc=专职辅助的无人机
+actors.hero.ally.auxiliarydrone$scoutdrone.name=侦察无人机
+actors.hero.ally.auxiliarydrone$scoutdrone.desc=录入鉴定卷轴后产生的辅助型无人机。不攻击，拥有3+玩家最大生命值15％的生命，自身仅拥有但可以为玩家提供3+神器效果等级/3圈视野(在神器+0时7*7，+9时13*13，以此类推)，会持续给予视野内所有敌人1回合的“弱点标记”效果(受到的伤害提高33％)
+actors.hero.ally.auxiliarydrone$mirrordrone.name=映像无人机
+actors.hero.ally.auxiliarydrone$mirrordrone.desc=录入镜像卷轴后产生的辅助型无人机。不攻击，拥有3+玩家最大生命值10％的生命，每架无人机每过49-神器效果等级次行动后在自身周围产生一个玩家的镜像
+actors.hero.ally.auxiliarydrone$protectdrone.name=庇佑无人机
+actors.hero.ally.auxiliarydrone$protectdrone.desc=录入传送卷轴后产生的辅助型无人机。不攻击，拥有3+玩家最大生命值33％的生命，每架无人机给予玩家1~2点护甲，死亡后将击杀者随机传送
+actors.hero.ally.auxiliarydrone$escortdrone.name=护航无人机
+actors.hero.ally.auxiliarydrone$escortdrone.desc=录入探地卷轴后产生的辅助型无人机。不攻击，拥有3+玩家最大生命值10％的生命，每架无人机每过50回合给予玩家4回合的“隐形”效果
+actors.hero.ally.auxiliarydrone$bombdrone.name=爆破无人机
+actors.hero.ally.auxiliarydrone$bombdrone.desc=录入复仇卷轴后产生的辅助型无人机。不攻击，拥有玩家2倍的移动速度和3+玩家最大生命值10％的生命，离开玩家周围后每回合-1生命，死亡后产生3x3范围的爆炸。这一爆炸不会伤害玩家以及其他无人机
+actors.hero.ally.auxiliarydrone$chaosdrone.name=混沌无人机
+actors.hero.ally.auxiliarydrone$chaosdrone.desc=录入嬗变卷轴后产生的无人机。拥有1+玩家最大生命值10％的生命，在31-神器效果等级次行动后变为随机的战斗型(AT-400)/辅助型(AU-400)无人机。期间无任何作用
+
+actors.hero.herosubclass.au400=AU-400
+actors.hero.herosubclass.au400_short_desc=_AU-400_允许调用更多辅助型无人机协助作战，善用功能性强大的无人机可以有效提高生存能力。
+actors.hero.herosubclass.au400_desc=AU-400受到被标记的敌人的物理攻击时拥有20%减伤，并且现在能够录入更多卷轴以调用更多种类的辅助型无人机，这些无人机在辅助性能方面都更为优秀。\n\n侦察无人机(鉴定)：用于侦察的同时还能够揭示敌人弱点\n映像无人机(镜像)：每隔一段时间产生一个你的镜像\n庇佑无人机(传送)：提高你的防御并能将危险的敌人转移\n护航无人机(探地)：能够掩蔽你的行踪以提高探索安全性\n爆破无人机(复仇)：通过自爆杀伤敌人\n混沌无人机(嬗变)：在一段时间后变化为任意辅助型无人机
+
+actors.hero.talent.special_mark.title=特化标记
+actors.hero.talent.special_mark.desc=_+1：_：AU-400攻击带有指令标记效果的敌人时提高_50%命中_并有_16.7%概率_给予其3回合众矢之的效果。\n\n_+2：_AU-400攻击带有指令标记效果的敌人时提高_75%命中_并有_33.3%概率_给予其3回合众矢之的效果。\n\n_+3：_AU-400攻击带有指令标记效果的敌人时提高_100%命中_并有_50%概率_给予其3回合众矢之的效果。
+
+actors.hero.talent.assist_upgrade.title=辅助升级
+actors.hero.talent.assist_upgrade.desc=_+1：_AU-400产生的所有辅助型无人机每架每隔_50回合_会为其提供_4点护盾_。\n\n_+2：_AU-400产生的所有辅助型无人机每架每隔_40回合_会为其提供_4点护盾_。\n\n_+3：_AU-400产生的所有辅助型无人机每架每隔_30回合_会为其提供_4点护盾_。\n\n该天赋不对变化前的混沌无人机生效。
+
+actors.hero.talent.fast_cruise.title=快速巡航
+actors.hero.talent.fast_cruise.desc=_+1：_AU-400产生的所有辅助型无人机每架每隔_80回合_会为其提供_2回合极速_。\n\n_+2：_AU-400产生的所有辅助型无人机每架每隔_70回合_会为其提供_2回合极速_。\n\n_+3：_AU-400产生的所有辅助型无人机每架每隔_60回合_会为其提供_2回合极速_。\n\n该天赋不对变化前的混沌无人机生效。
 
 
 
